@@ -7,10 +7,9 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.Collection;
-import java.util.Date;
-import java.util.List;
-import java.util.Set;
+import java.time.Duration;
+import java.time.Instant;
+import java.util.*;
 
 @Data
 @Builder
@@ -34,6 +33,10 @@ public class User implements UserDetails {
     private String telephone;
     private String nationalite;
     private String photo;
+    private boolean blocked;
+    private Instant blockedTimestamp;
+    private Duration blockedDuration;
+
 
     @ManyToOne
     private Academie academie;
@@ -44,7 +47,11 @@ public class User implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(role.name()));
+        if (role != null) {
+            return role.getAuthorities();
+        } else {
+            return Collections.emptyList(); // or return null, depending on your use case
+        }
     }
 
     @Override
